Report preview error/warning when invoking methods whose owner is a preview class/interface on a site that is non-preview. Dtto for dereferencing fields.